--- a/doc/specs/string.tex
+++ b/doc/specs/string.tex
@@ -2,6 +2,27 @@
 
 A \dfn{string} is a sequence of characters.
 
+\subsection{Prototypes}
+\begin{itemize}
+\item \refObject{Comparable}
+\item \refObject{Orderable}
+\end{itemize}
+
+\subsection{Construction}
+The simplest way to create fresh String is by using the literal
+syntax. A null String can also be obtained with \lstinline|String|'s
+\lstinline|new| method.
+
+\begin{urbiscript}
+String.new;
+[00000000] ""
+String;
+[00000000] ""
+"123";
+[00000000] "123"
+\end{urbiscript}
+
+\subsection{Methods}
 \begin{itemize}
 \item \lstinline|asFloat|\\
   If the whole content of \lstinline|this| is an integer, return its
@@ -12,6 +33,20 @@ A \dfn{string} is a sequence of characters.
 
 "123abc".asFloat;
 [00000001:error] !!! asFloat: unable to convert to float: "123abc"
+\end{urbiscript}
+
+\item \lstinline|asList|\\
+  Return a List of one-letter Strings that, concataneted, equal
+  \lstinline|this|.  This allows to use \lstinline|for| to iterate
+  over the string.
+\begin{urbiscript}
+"123".asList;
+[00000001] ["1", "2", "3"]
+for (var v : "123")
+  echo(v);
+[00000001] *** 1
+[00000001] *** 2
+[00000001] *** 3
 \end{urbiscript}
 
 \item \lstinline|asPrintable|\\
@@ -40,6 +75,17 @@ A \dfn{string} is a sequence of characters.
 assert("foo".distance("foo") == 0);
 assert("bar".distance("baz") == 1);
 assert("foo".distance("bar") == 3);
+\end{urbiscript}
+
+\item \lstinline|fresh|\\
+  Return a String that has never been used as an identifier, prefixed
+  by \lstinline|this|.  It can safely be used with
+  \lstinline|Object.setSlot| and so forth.
+\begin{urbiscript}
+String.fresh;
+[00000000] "_5"
+"foo".fresh;
+[00000000] "foo_6"
 \end{urbiscript}
 
 \item \lstinline|replace(\var{from}, \var{to})|\\
@@ -103,8 +149,43 @@ assert("foo" + "" == "foo");
 assert("foo" + 3 == "foo3");
 assert("foo" + [1, 2, 3] == "foo[1, 2, 3]");
 \end{urbiscript}
-\end{itemize}
 
+\item \lstinline|< \var{other}|\\
+  Whether \lstinline|this| is lexicographically before \var{other},
+  which must be a String.
+\begin{urbiscript}
+assert("" < "a");
+assert(!("a" < ""));
+assert("a" < "b");
+assert(!("a" < "a"));
+\end{urbiscript}
+
+\item \lstinline|[\var{from}]|\\
+  \lstinline|[\var{from}, \var{to}]|\\
+  Return the substring starting at \var{from}, up to and not including
+  \var{to} (which defaults to \var{to} + 1).
+\begin{urbiscript}
+assert("foobar"[0, 3], "foo");
+assert("foobar"[0], "b");
+\end{urbiscript}
+
+\item \lstinline|[\var{from}]| = \var{other}\\
+  \lstinline|[\var{from}, \var{to}]| = \var{other}\\
+  Replace the substring starting at \var{from}, up to and not including
+  \var{to} (which defaults to \var{to} + 1), by \var{other}.  Return
+  \var{other}.
+
+  Beware that this routine is imperative: it changes the value of
+  \lstinline|this|.
+\begin{urbiscript}
+var s1 = "foobar" | var s2 = s1 |
+assert(s1[0, 3] = "quux", "quux");
+assert(s1, "quuxbar");
+assert(s2, "quuxbar");
+assert(s1[4, 7] = "", "");
+assert(s2, "bar");
+\end{urbiscript}
+\end{itemize}
 
 %%% Local Variables:
 %%% mode: latex
