doc: start nuking out floating listings.
	* doc/faq.tex, doc/installation.tex, doc/tutorial/tutorial.tex,
	* doc/urbi-report.sty: here.

--- a/doc/installation.tex
+++ b/doc/installation.tex
@@ -4,7 +4,10 @@
 \section{Download}
 
 Various precompiled packages are provided.  They are named
-\file{urbi-sdk-\var{version}-\var{arch}-\var{os}-\var{compiler}.\var{ext}} where
+\begin{center}
+\file{urbi-sdk-\var{version}-\var{arch}-\var{os}-\var{compiler}.\var{ext}}
+\end{center}
+where
 \begin{description}
 \item[\var{version}] specifies the exact revision of Urbi that you are
   using.  It can be simple, \code{2.0}, or more complex,
