--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -111,7 +111,7 @@
 \lstnewenvironment{urbiscript}[1][]
   {\lstset{language=[interactive]urbi,
       basicstyle=\ttfamily\footnotesize,
-      float=\floatposh,
+      floatplacement=\floatposh,
       #1}}
   {}
 
@@ -119,7 +119,7 @@
 \lstnewenvironment{urbifixme}[1][]
   {\lstset{language=[interactive]urbi,
       basicstyle=\ttfamily\footnotesize,
-      float=\floatposh,
+      floatplacement=\floatposh,
       #1}}
   {}
 
