doc: minor changes.
	* doc/introduction.tex: Point to the updated documentation.
	* doc/specs/string.tex: Fix \href use.
	* doc/urbi-sdk.tex: Put the intro before the toc.
	(\docurl): New.

--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -32,6 +32,11 @@ Its main features are:
   network.
 \end{itemize}
 
+This documentation is far from complete.  It is updated regularly on
+the Gostai Web site, in \url{\docurl}, both as a PDF document,
+\href{\docurl/urbi-sdk.pdf}{urbi-sdk.pdf}, and as HTML pages,
+\href{\docurl/urbi-sdk.html}{urbi-sdk.html}.
+
 
 %% \paragraph{Thanks}
 %% The \us language what first designed and implemented by
