--- a/doc/specs/string.tex
+++ b/doc/specs/string.tex
@@ -67,8 +67,8 @@ for (var v : "123")
 
 \item \lstinline|distance(\var{other})|\\
   Return the
-  \href{http://en.wikipedia.org/wiki/Damerau-Levenshtein_distance,
-    Damerau-Levenshtein} distance between \lstinline|this| and
+  \href{http://en.wikipedia.org/wiki/Damerau-Levenshtein_distance}
+  {Damerau-Levenshtein distance} between \lstinline|this| and
   \var{other}.  The more alike the strings are, the smaller the
   distance is.
 \begin{urbiscript}
