--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -7,6 +7,8 @@
   \usepackage{indexing}
   \usepackage{revision}
 
+\newcommand{\docurl}{http://www.gostai.com/downloads/urbi-sdk-2.0/doc}
+
 % CONFIGURATION
 \title{The Urbi Software Development Kit}
 \subtitle{Version \VcsDescription}
@@ -16,9 +18,10 @@
 \begin{document}
 
 \maketitle
-\tableofcontents
 
 \input{introduction}
+
+\tableofcontents
 
 \part{Urbi SDK Tutorial}
 \input{tutorial/tutorial}
