doc: add tag and mutex in stdlib.
	* doc/specs/mutex.tex: New.
	* doc/specs/stdlib.tex: add mutex.
	* doc/specs/tag.tex: add ref to...
	* doc/tutorial/tutorial.tex: here.

--- a/doc/specs/tag.tex
+++ b/doc/specs/tag.tex
@@ -1,5 +1,8 @@
 \section{Tag}
 
+A Tag is an object which you can use to tag some blocs of code.
+Tagged code can be freezed, resumed, stopped... See also \autoref{sec:tut:tags}.
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../urbi-sdk"
