--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -1831,6 +1831,7 @@ sleep(1s);
 \end{urbiscript}
 
 \section{Tags for parallel control flows}
+\label{sec:tut:tags}
 
 Tags are a multipurpose code execution control and instrumentation
 feature. Any chunk of code can be tagged, by preceding it with a tag
