--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -19,6 +19,7 @@
 \input{specs/lazy}
 \input{specs/list}
 \input{specs/lobby}
+\input{specs/mutex}
 \input{specs/object}
 \input{specs/orderable}
 \input{specs/pair}
