--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -430,10 +430,9 @@ list of slot names, each of which indexes a value --- just like a
 dictionary. You can get an object's slot value by using the dot
 (\lstinline{.}) operator on this object, followed by the name of the
 slot. You can list the names of the slots of an object with the
-\lstinline{slotNames} method. \autoref{lst:tut:object-slots} makes
-this very clear: we dissect an object to point out its structure.
+\lstinline{slotNames} method.
 
-\begin{urbiscript}[caption=Inspecting an \us object,label=lst:tut:object-slots]
+\begin{urbiscript}
 // Create a fresh object with two slots.
 class Foo { var a = 42; var b = "foo"; };
 [00000000] Foo
@@ -454,11 +453,9 @@ parent type of every object (in fact, since \us is prototype-based,
 \lstinline{Object} is the uppermost prototype of every object, but
 we'll talk about prototypes later). An instance of object, is an
 empty, neutral object, so let's start by instantiating one with the
-\lstinline{clone} method of \lstinline{Object}
-(\autoref{lst:tut:object-new}).
+\lstinline{clone} method of \lstinline{Object}.
 
-\begin{urbiscript}[caption=Instanciating a new object,
-  label=lst:tut:object-new, name=object-slots]
+\begin{urbiscript}
 // Create the o variable as a fresh object.
 var o = Object.clone;
 [00000000] Object_0x00000000
@@ -481,11 +478,10 @@ zeroes in this document.
 We're now getting back to our empty object. We want to give it two
 slots, \lstinline{a} and \lstinline{b}, with values \lstinline|42| and
 \lstinline|"foo"| respectively. We can do this with the
-\lstinline{setSlot} method (\autoref{lst:tut:setslot}), which takes the slot name and
+\lstinline{setSlot} method, which takes the slot name and
 its value.
 
-\begin{urbiscript}[caption=Defining slots, label=lst:tut:setslot,
-  name=object-slots]
+\begin{urbiscript}
 o.setSlot("a", 42);
 [00000000] 42
 o.slotNames;
@@ -495,10 +491,9 @@ o.a;
 \end{urbiscript}
 
 Here we successfully created our first slot, a. A good shorthand for
-setting slot is using the \lstinline{var} keyword (\autoref{lst:tut:setslot-var}).
+setting slot is using the \lstinline{var} keyword.
 
-\begin{urbiscript}[caption=Defining slots with var,
-  label=lst:tut:setslot-var, name=object-slots]
+\begin{urbiscript}
 // This is equivalent to o.setSlot("b", "foo").
 var o.b = "foo";
 [00000000] "foo"
@@ -513,14 +508,13 @@ the name of the slot at the time of writing the code. With the former
 one, you can compute the slot name at execution time. Likewise, you
 can read a slot with a run-time determined name with the
 \lstinline{getSlot} method, which takes the slot name as
-argument. \autoref{lst:tut:getslot-setslot} illustrates the use of
+argument.  The following listing illustrates the use of
 \lstinline{getSlot} and \lstinline{setSlot} to read and write slots whose
 names are unknown at code-writing time.
 
 % mefyl: FIXME: I never introduced that '+' concatenates strings.
 
-\begin{urbiscript}[caption=Dynamic slots with getSlot and setSlot,
-  label=lst:tut:getslot-setslot]
+\begin{urbiscript}
 function set(object, name, value)
 {
   // We have to use setSlot here, since we don't
@@ -553,10 +547,9 @@ them afterward, even if their name is dynamically computed, with
 there's a method to update the value of the slot. Guess what, there's
 one, and it's named\ldots \lstinline{updateSlot} (originality
 award). Getting back to our \lstinline{o} object, let's try to update one
-of its slot (\autoref{lst:tut:updateslot}).
+of its slots.
 
-\begin{urbiscript}[caption=Updating a slot, label=lst:tut:updateslot,
-  name=object-slots]
+\begin{urbiscript}
 o.a;
 [00000000] 42
 o.updateSlot("a", 51);
@@ -566,10 +559,9 @@ o.a;
 \end{urbiscript}
 
 Again, there's a shorthand for \lstinline{updateSlot}: operator
-\lstinline{=} (\autoref{lst:tut:updateslot-eq}).
+\lstinline{=}.
 
-\begin{urbiscript}[caption=Updating a slot with '\lstinline{=}',
-  label=lst:tut:updateslot-eq, name=object-slots]
+\begin{urbiscript}
 o.b;
 [00000000] "foo"
 // Equivalent to o.updateSlot("b", "bar")
@@ -579,17 +571,15 @@ o.b;
 [00000000] "bar"
 \end{urbiscript}
 
-Likewise, you should prefer the '\lstinline{=}' notation whenever
+Likewise, prefer the '\lstinline{=}' notation whenever
 possible, but you'll need \lstinline{updateSlot} to update a slot whose
 name you don't know at code-writing time.
 
 Note that defining the same slot twice, be it with \lstinline{setSlot} or
 \lstinline{var}, is an error. The slot must be defined once with setSlot,
-and subsequent writes must be done with \lstinline{updateSlot}
-(\autoref{lst:tut:redefinition}).
+and subsequent writes must be done with \lstinline{updateSlot}.
 
-\begin{urbiscript}[caption=Defining a slot twice is an error,
-  label=lst:tut:redefinition, name=object-slots]
+\begin{urbiscript}
 var o.c = 0;
 [00000000] 0
 // Can't redefine a slot like this
@@ -600,11 +590,9 @@ o.c = 1;
 [00000000] 1
 \end{urbiscript}
 
-Finally, use \lstinline{removeSlot} to delete a slot from an object
-(\autoref{lst:tut:removeslot}).
+Finally, use \lstinline{removeSlot} to delete a slot from an object.
 
-\begin{urbiscript}[caption=Removing a slot, label=lst:tut:removeslot,
-  name=object-slots]
+\begin{urbiscript}
 o.slotNames.sort;
 [00000000] ["a", "b", "c"]
 o.removeSlot("c");
@@ -616,11 +604,9 @@ o.slotNames.sort;
 Here we are, now you can inspect and modify objects at will. Don't
 hesitate to explore \us objects you'll encounter through this
 documentation like this. Last point: reading, updating or removing a
-slot which does not exist is, of course an error
-(\autoref{lst:tut:lookup-failed}).
+slot which does not exist is, of course, an error.
 
-\begin{urbiscript}[caption=Manipulating nonexistent slot is an error,
-  label=lst:tut:lookup-failed, name=object-slots]
+\begin{urbiscript}
 o.d;
 [00000000:error] !!! lookup failed: d
 o.d = 0;
@@ -629,27 +615,24 @@ o.d = 0;
 
 \section{Methods}
 
-Methods in \us are simply object slots containing functions. We made
-a little simplification earlier by saying that \lstinline|obj.slot| is
+Methods in \us are simply object slots containing functions. We made a
+little simplification earlier by saying that \lstinline|obj.slot| is
 equivalent to \lstinline|obj.getSlot("slot")|: if the fetched value is
 executable code such as a function, the dot form evaluates it, as
-illustrated by \autoref{lst:tut:auto-eval}. Inside a method, you can get the
-target with the \lstinline|this| keyword - the equivalent of \Cxx's
-\lstinline{this}. \lstinline|this| can be omitted if there is no
-ambiguity with local variables.
+illustrated below. Inside a method, \lstinline|this| gives access to
+the target --- as in \Cxx.  It can be omitted if there is no ambiguity
+with local variables.
 
-\begin{urbiscript}[caption=Function in object are automatically evaluated,
-label=lst:tut:auto-eval]
+\begin{urbiscript}
 var o = Object.clone;
 [00000000] Object_0x0
-// This syntax stores the function
-// in the 'f' slot of 'o'.
+// This syntax stores the function in the 'f' slot of 'o'.
 function o.f ()
 {
   echo("This is f with target " + this);
   return 42;
 } | {};
-// The slot value is the function
+// The slot value is the function.
 o.getSlot("f");
 [00000001] function () {
 [:]  echo("This is f with target " . '+'(this));
@@ -659,7 +642,7 @@ o.getSlot("f");
 o.f;
 [00000000] *** This is f with target Object_0x0
 [00000000] 42
-// The parentheses are in fact optional
+// The parentheses are in fact optional.
 o.f();
 [00000000] *** This is f with target Object_0x0
 [00000000] 42
@@ -671,10 +654,9 @@ replace an attribute with a method without changing the object
 interface, since the parentheses are optional.
 
 This implies that getSlot can be a better tool for object inspection
-to avoid invoking slots, as shown by \autoref{lst:tut:getslot-function}.
+to avoid invoking slots, as shown below.
 
-\begin{urbiscript}[caption=Inspecting executable slots with \lstinline{getSlot},
-label=lst:tut:getslot-function]
+\begin{urbiscript}
 // The 'empty' method of strings return
 // whether they're the empty string.
 "foo".empty;
@@ -690,32 +672,27 @@ label=lst:tut:getslot-function]
 \end{urbiscript}
 
 So the empty function simply checks whether the target string is empty
-with the equality operator! Let's try \lstinline{getSlot}'ing another method in
-\autoref{lst:tut:getslot-primitive}.
+with the equality operator! Let's try \lstinline{getSlot}'ing another method:
 
-\begin{urbiscript}[caption=Primitives, label=lst:tut:getslot-primitive]
+\begin{urbiscript}
 "foo".size;
 [00000000] 3
 "foo".getSlot("size");
 [00000000] Primitive_0x0
 \end{urbiscript}
 
-So strings' \lstinline{size} method is another type of object, a
-\lstinline{Primitive}. These object are executable, just like function,
-but they are actually primitives implemented in \Cxx, not \us. You
-have thus no means to see their inner code.
+So the \lstinline{size} method of \refObject{String} is another type
+of object, a \refObject{Primitive}. These objects are executable, like
+functions, but they are actually primitives implemented in \Cxx. You
+have thus no means to see their body.
 
 \section{Everything is an object}
 
-If you're wondering what is an object and what isn't, the answer is
+If you're wondering what is an object and what is not, the answer is
 simple: every single bit of value you manipulate in \us is an
 object, including primitive types, types themselves, functions, \ldots
-\autoref{lst:tut:everything-object} illustrates this.
 
-% FIXME: This does actually not work like this because the toplevel
-% isn't a local scope! puke puke puke!
-\begin{urbiscript}[caption=Everything is an object,
-label=lst:tut:everything-object]
+\begin{urbiscript}
 var x = 0;
 [00000000] 0
 x.slotNames;
@@ -737,16 +714,16 @@ As you can see, integers are objects just like any other value.
 
 \section{The \us values model}
 
-We are now going to focus on the \us value model. That is, how
-values are stored and passed around. The whole point is to understand
-when variables are the same. For this, we are going to introduce a new
-method, \lstinline{uid}. This method returns the target's unique
-identifier - the same one that was printed when we evaluated
-\lstinline|Object.clone|. See \autoref{lst:tut:uid}. Of course, uids might vary
-from an execution to another, so their value here are dummy, yet not
-null to be able to differentiate them.
+We are now going to focus on the \us value model, that is how values
+are stored and passed around. The whole point is to understand when
+variables point to the same object.  For this, we introduce
+\lstinline{uid}, a method that returns the target's unique identifier
+--- the same one that was printed when we evaluated
+\lstinline|Object.clone|.  Since uids might vary from an execution to
+another, their values in this documentation are dummy, yet not null to
+be able to differentiate them.
 
-\begin{urbiscript}[caption=Uids, label=lst:tut:uid]
+\begin{urbiscript}
 var o = Object.clone;
 [00000000] Object_0x1
 o.uid;
@@ -758,19 +735,18 @@ o.uid;
 \end{urbiscript}
 
 % FIXME: maybe should I introduce == and other basic operator before.
-We can see here that our objects have different uids, meaning they are
+Our objects have different uids, reflecting the fact that they are
 different objects. Note that inputting the same integer twice
 (\lstinline{42} here) yields different objects. Let's introduce new
 operators before diving in this concept. First the equality operator:
-\lstinline{==}. This operator is the exact same as \C or \Cxx's one, it
-simply returns whether its two operands are semantically equal. The
-second operator is \lstinline{===}, which is the physical equality
-operator. It returns whether its two operands are the same object,
-which is equivalent to having the same uid. This can seem a bit
-confusing; let's take a look at \autoref{lst:tut:phy-eq} to have a first example.
+\lstinline{==}. This operator is the exact same as \C or \Cxx's one,
+it simply returns whether its two operands are \emph{semantically}
+equal. The second operator is \lstinline{===}, which is the
+\emph{physical} equality operator. It returns whether its two operands
+are the same object, which is equivalent to having the same uid. This
+can seem a bit confusing; let's have an example.
 
-\begin{urbiscript}[caption=Physical equality operator,
-label=lst:tut:phy-eq]
+\begin{urbiscript}
 var a = 42;
 [00000000] 42
 var b = 42;
@@ -790,11 +766,9 @@ Thanks to this operator, we can point out the fact that slots and
 local variables in \us have a reference semantic. That is, when you
 defining a local variable or a slot, you're not copying any value (as
 you would be in \C or \Cxx), you're only making it refer to an already
-existing value (as you would in \ruby or \java). See \autoref{lst:tut:ref-to-same}
-for an illustration.
+existing value (as you would in \ruby or \java).
 
-\begin{urbiscript}[caption=Two references to the same object,
-  label=lst:tut:ref-to-same, name=same]
+\begin{urbiscript}
 var a = 42;
 [00000000] 42
 var b = 42;
@@ -833,12 +807,10 @@ c.slotNames;
 [00000000] ["flag"]
 \end{urbiscript}
 
-Updating slots or local variable doesn't update the referenced
-value. It simply change the variable to refer to the new given value,
-as illustrated by \autoref{lst:tut:change-ref}.
+Updating slots or local variables does not update the referenced
+value. It simply redirects the variable to the new given value.
 
-\begin{urbiscript}[caption=Updates just change the referee,
-  label=lst:tut:change-ref]
+\begin{urbiscript}
 var a = 42;
 [00000000] 42
 var b = a;
@@ -846,9 +818,8 @@ var b = a;
 // b and a point to the same integer.
 a === b;
 [00000000] true
-// Updating b won't change the referred value, 42.
-// We're simply making it reference
-// a fresh integer with value 51.
+// Updating b won't change the referred value, 42,
+// it makes it reference a fresh integer with value 51.
 b = 51;
 [00000000] 51
 // Thus, a is left unchanged:
@@ -859,12 +830,10 @@ a;
 Understanding the two latter examples is really important, to be aware
 of what your variable are referring to.
 
-Finally, function and method arguments are also passed by
-reference. Which means they can be modified by the function
-(\autoref{lst:tut:arg-mod}).
+Finally, function and method arguments are also passed by reference:
+they can be modified by the function.
 
-\begin{urbiscript}[caption=Function modifying its argument,
-label=lst:tut:arg-mod]
+\begin{urbiscript}
 function test(arg)
 {
   var arg.flag;  // add a slot in arg
@@ -880,17 +849,14 @@ x.slotNames;
 [00000000] ["flag"]
 \end{urbiscript}
 
-Beware however of \autoref{lst:tut:arg-no-mod}, where the given function doesn't
-have the behavior you may have expected.
+Beware however that arguments are passed by reference, and the
+behavior might not be what you may expected.
 
-\begin{urbiscript}[caption=Function failing to modify its argument,
-label=lst:tut:arg-no-mod]
+\begin{urbiscript}
 function test(arg)
 {
-  // This updates the local variable arg
-  // to refer 1.
-  // This does not affect the referred value,
-  // nor the actual external argument.
+  // Updates the local variable arg to refer 1.
+  // Does not affect the referred value, nor the actual external argument.
   arg = 1;
 } | {};
 var x = 0;
@@ -921,9 +887,9 @@ The \lstinline{if} construct is the same has \C/\Cxx's one. The
 an expression, and optionally the \lstinline{else} keyword and another
 expression. If the condition evaluates to true, the first expression
 is evaluated. Otherwise, the second expression is evaluated if
-present (\autoref{lst:tut:if}).
+present.
 
-\begin{urbiscript}[caption=The \lstinline{if} construct, label=lst:tut:if]
+\begin{urbiscript}
 if (true)
   echo("ok");
 [00000000] *** ok
@@ -934,10 +900,9 @@ else
 [00000000] *** ok
 \end{urbiscript}
 
-Note that \lstinline|if| statements themselves are values
-(\autoref{lst:tut:if-value}).
+The \lstinline|if| construct is an expression: it has a value.
 
-\begin{urbiscript}[caption=\lstinline{if} are values, label=lst:tut:if-value]
+\begin{urbiscript}
 echo({ if (false) "a" else "b" });
 [00000000] *** b
 \end{urbiscript}
@@ -948,11 +913,10 @@ The \lstinline{while} construct is, again, the same as in \C/\Cxx. The
 \lstinline{while} keyword is followed by a condition between parentheses
 and an expression. If the expression evaluation is false, the
 execution jumps after the while block; otherwise, the expression is
-evaluated and control jumps before the while block (\autoref{lst:tut:while}).
+evaluated and control jumps before the while block.
 
 % FIXME: += wasn't introduced
-\begin{urbiscript}[caption=The \lstinline{while} construct,
-label=lst:tut:while]
+\begin{urbiscript}
 var x = 2;
 [00000000] 2
 while (x < 40)
@@ -968,13 +932,13 @@ while (x < 40)
 
 \section{for}
 
-The \lstinline{for} keyword supports two different constructs, as in
+The \lstinline{for} keyword supports different constructs, as in
 languages such as Java, \Cs, or even the forthcoming \Cxx revision.
 
-The first constructs is hardly more than syntactic suggar for a
+The first construct is hardly more than syntactic suggar for a
 \lstinline{while} loop.
 
-\begin{urbiscript}[caption=Iterations with increments, label=lst:tut:for]
+\begin{urbiscript}
 for (var x = 2; x < 40; x += 10)
   echo(x);
 [00000000] *** 2
@@ -986,14 +950,12 @@ for (var x = 2; x < 40; x += 10)
 The second construct allows to iterate over members of a collection,
 such as a list. The \lstinline{for} keyword, followed by
 \lstinline|var|, an identifier, a semicolon (or \lstinline|in|), an
-expression and a
-scope, executes the scope for every element in the collection
-resulting of the evaluation of the expression, with the variable named
-with the identifier referring to the list
-elements. \autoref{lst:tut:for-in} is self explanatory.
+expression and a scope, executes the scope for every element in the
+collection resulting of the evaluation of the expression, with the
+variable named with the identifier referring to the list
+elements.
 
-\begin{urbiscript}[caption=Collection iteration with \lstinline{for},
-label=lst:tut:for-in]
+\begin{urbiscript}
 for (var e : [1, 2, 3]) { echo(e) };
 [00000000] *** 1
 [00000000] *** 2
@@ -1010,7 +972,7 @@ ones. Comparison is done by semantic equality (operator
 \lstinline{break}).  Also, contrary to \Cxx, the whole construct has a
 value: that of the matching \lstinline{case}.
 
-\begin{urbiscript}[caption=The \lstinline{switch} construct, label=switch]
+\begin{urbiscript}
 switch ("bar")
 {
   case "foo":  0;
@@ -1025,9 +987,9 @@ switch ("bar")
 \label{section:constructs/do}
 
 A do scope is a shorthand to perform several actions on an
-object. Consider \autoref{lst:tut:no-do}.
+object.
 
-\begin{urbiscript}[caption=Lot of code bloat,label=lst:tut:no-do]
+\begin{urbiscript}
 var o = Object.clone;
 [00000000] Object_0x0
 var o.one = 1;
@@ -1038,7 +1000,7 @@ echo(o.uid);
 [00000000] *** 0x0
 \end{urbiscript}
 
-The same result can be obtained with a short do scope, that redirect
+The same result can be obtained with a short \lstinline|do| scope, that redirect
 method calls to their target, as in \autoref{lst:tut:do}. This is
 similar to the \pascal ``\lstinline{with}'' construct.  The value of
 the \lstinline{do}-block is the target itself.
@@ -1070,7 +1032,7 @@ tool.
 
 Scope are expressions, just as \lstinline|1 + 1| or \lstinline|"foo"|.
 They evaluate to the last expression they contain, or void if they're
-empty. \autoref{lst:tut:scope-exp} illustrate the use of scopes as
+empty. The following listing illustrates the use of scopes as
 expressions. Note that the last semicolon inside a scope is optional.
 
 \begin{urbiscript}[caption=Using scope as expressions,label=lst:tut:scope-exp]
@@ -1100,11 +1062,10 @@ var x = 0; // Define the outer x.
   echo(x);   // the inner x
 };
 [00000000] *** 2
-// This is the outer x again.
-x;
+x;           // This is the outer x again.
 [00000000] 0
 {
-  x = 3; // This is still the outer x.
+  x = 3;     // This is still the outer x.
   echo(x);
 };
 [00000000] *** 3
