--- a/doc/specs/tag.tex
+++ b/doc/specs/tag.tex
@@ -1,7 +1,7 @@
 \section{Tag}
 
 A Tag is an object which you can use to tag some blocs of code.
-Tagged code can be freezed, resumed, stopped... See also \autoref{sec:tut:tags}.
+Tagged code can be freezed, resumed, stopped\ldots See also \autoref{sec:tut:tags}.
 
 %%% Local Variables:
 %%% mode: latex
