--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -29,6 +29,7 @@
 \input{specs/system}
 \input{specs/system/platform}
 \input{specs/tag}
+\input{specs/timeout}
 \input{specs/void}
 
 %% Restore the definition of \section.
